--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,11 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+  
+# Programming
+- skill: Programming
+  description: Php and angularjs
+  
+# Team Management
+- skill: Team Management
+  description: Manage Team in technical aspect.
